[gd_scene load_steps=9 format=3 uid="uid://cdwvtbtwmrqbn"]

[ext_resource type="Script" uid="uid://dbxrmlo8ocuvk" path="res://scenes/PauseMenu/PauseMenu.gd" id="2"]
[ext_resource type="PackedScene" uid="uid://dnlyj8r7kuvas" path="res://scenes/RGT_Dialogs/RGT_ConfirmationDialog.tscn" id="2_ovglx"]
[ext_resource type="Script" uid="uid://cfg1y1ygdri27" path="res://scenes/PauseMenu/history_log_container.gd" id="3_f5w72"]
[ext_resource type="PackedScene" uid="uid://c2lv8pxfcnayg" path="res://scenes/PauseMenu/history_log.tscn" id="4_8bpk1"]
[ext_resource type="PackedScene" uid="uid://djnvp4x64ukay" path="res://scenes/OptionsMenu/OptionsContainer.tscn" id="4_pyl8d"]
[ext_resource type="PackedScene" uid="uid://cy4anjja2feca" path="res://scenes/RGT_Dialogs/RGT_YesNoDialog.tscn" id="4_rf7yh"]
[ext_resource type="PackedScene" uid="uid://choevp6ilq78t" path="res://scenes/LoadSaveMenu/loadSaveMenu.tscn" id="5_itqmq"]

[sub_resource type="ButtonGroup" id="ButtonGroup_8bpk1"]

[node name="PauseMenu" type="Control"]
process_mode = 2
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0

[node name="BoxContainer" type="BoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MenuContainer" type="MarginContainer" parent="BoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="BoxContainer/MenuContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="BoxContainer/MenuContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 16

[node name="Title" type="Label" parent="BoxContainer/MenuContainer/VBoxContainer/MarginContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Pause"
horizontal_alignment = 1

[node name="MenuButtons" type="VBoxContainer" parent="BoxContainer/MenuContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 3
theme_override_constants/separation = 16
alignment = 1

[node name="ResumeButton" type="Button" parent="BoxContainer/MenuContainer/VBoxContainer/MenuButtons"]
unique_name_in_owner = true
custom_minimum_size = Vector2(128, 40)
layout_mode = 2
text = "Resume"

[node name="SaveButton" type="Button" parent="BoxContainer/MenuContainer/VBoxContainer/MenuButtons"]
unique_name_in_owner = true
custom_minimum_size = Vector2(128, 40)
layout_mode = 2
toggle_mode = true
button_group = SubResource("ButtonGroup_8bpk1")
text = "Save"

[node name="LoadButton" type="Button" parent="BoxContainer/MenuContainer/VBoxContainer/MenuButtons"]
unique_name_in_owner = true
custom_minimum_size = Vector2(128, 40)
layout_mode = 2
toggle_mode = true
button_group = SubResource("ButtonGroup_8bpk1")
text = "Load"

[node name="OptionsButton" type="Button" parent="BoxContainer/MenuContainer/VBoxContainer/MenuButtons"]
unique_name_in_owner = true
custom_minimum_size = Vector2(128, 40)
layout_mode = 2
toggle_mode = true
button_group = SubResource("ButtonGroup_8bpk1")
text = "Options"

[node name="HistoryButton" type="Button" parent="BoxContainer/MenuContainer/VBoxContainer/MenuButtons"]
unique_name_in_owner = true
custom_minimum_size = Vector2(128, 40)
layout_mode = 2
toggle_mode = true
button_group = SubResource("ButtonGroup_8bpk1")
text = "History"

[node name="RestartButton" type="Button" parent="BoxContainer/MenuContainer/VBoxContainer/MenuButtons"]
unique_name_in_owner = true
custom_minimum_size = Vector2(128, 40)
layout_mode = 2
text = "Restart"

[node name="MainMenuButton" type="Button" parent="BoxContainer/MenuContainer/VBoxContainer/MenuButtons"]
unique_name_in_owner = true
custom_minimum_size = Vector2(128, 40)
layout_mode = 2
text = "Main Menu"

[node name="ExitButton" type="Button" parent="BoxContainer/MenuContainer/VBoxContainer/MenuButtons"]
unique_name_in_owner = true
custom_minimum_size = Vector2(128, 40)
layout_mode = 2
text = "Exit Game"

[node name="TabContainer" type="TabContainer" parent="BoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_horizontal = 3
current_tab = 0
clip_tabs = false
tabs_visible = false

[node name="OptionsContainer" type="MarginContainer" parent="BoxContainer/TabContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 32
metadata/_tab_index = 0

[node name="VBoxContainer" type="VBoxContainer" parent="BoxContainer/TabContainer/OptionsContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="MarginContainer" type="MarginContainer" parent="BoxContainer/TabContainer/OptionsContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="OptionsContainer" parent="BoxContainer/TabContainer/OptionsContainer/VBoxContainer/MarginContainer" instance=ExtResource("4_pyl8d")]
layout_mode = 2
size_flags_vertical = 3

[node name="MarginContainer2" type="MarginContainer" parent="BoxContainer/TabContainer/OptionsContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="BackButton" type="Button" parent="BoxContainer/TabContainer/OptionsContainer/VBoxContainer/MarginContainer2"]
custom_minimum_size = Vector2(62, 40)
layout_mode = 2

[node name="HistoryScrollContainer" type="ScrollContainer" parent="BoxContainer/TabContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
metadata/_tab_index = 1

[node name="HistoryLogContainer" type="VBoxContainer" parent="BoxContainer/TabContainer/HistoryScrollContainer" node_paths=PackedStringArray("scroll")]
process_mode = 3
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 8
script = ExtResource("3_f5w72")
history_log_scene = ExtResource("4_8bpk1")
scroll = NodePath("..")

[node name="LoadSaveMenu" parent="BoxContainer/TabContainer" instance=ExtResource("5_itqmq")]
unique_name_in_owner = true
visible = false
layout_mode = 2
metadata/_tab_index = 2

[node name="AcceptDialog" type="AcceptDialog" parent="."]
unique_name_in_owner = true
unresizable = true

[node name="RGT_ConfirmationDialog" parent="." instance=ExtResource("2_ovglx")]
unique_name_in_owner = true

[node name="RGT_YesNoDialog" parent="." instance=ExtResource("4_rf7yh")]
unique_name_in_owner = true

[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
[connection signal="pressed" from="BoxContainer/MenuContainer/VBoxContainer/MenuButtons/ResumeButton" to="." method="_on_resume_button_pressed"]
[connection signal="toggled" from="BoxContainer/MenuContainer/VBoxContainer/MenuButtons/SaveButton" to="." method="_on_save_button_toggled"]
[connection signal="toggled" from="BoxContainer/MenuContainer/VBoxContainer/MenuButtons/LoadButton" to="." method="_on_load_button_toggled"]
[connection signal="toggled" from="BoxContainer/MenuContainer/VBoxContainer/MenuButtons/OptionsButton" to="." method="_on_options_button_toggled"]
[connection signal="toggled" from="BoxContainer/MenuContainer/VBoxContainer/MenuButtons/HistoryButton" to="." method="_on_history_button_toggled"]
[connection signal="pressed" from="BoxContainer/MenuContainer/VBoxContainer/MenuButtons/RestartButton" to="." method="_on_restart_button_pressed"]
[connection signal="pressed" from="BoxContainer/MenuContainer/VBoxContainer/MenuButtons/MainMenuButton" to="." method="_on_main_menu_button_pressed"]
[connection signal="pressed" from="BoxContainer/MenuContainer/VBoxContainer/MenuButtons/ExitButton" to="." method="_on_exit_button_pressed"]
[connection signal="pressed" from="BoxContainer/TabContainer/OptionsContainer/VBoxContainer/MarginContainer2/BackButton" to="." method="_on_back_button_pressed"]
[connection signal="visibility_changed" from="BoxContainer/TabContainer/HistoryScrollContainer/HistoryLogContainer" to="BoxContainer/TabContainer/HistoryScrollContainer/HistoryLogContainer" method="_on_visibility_changed"]
[connection signal="confirmed" from="AcceptDialog" to="." method="_on_accept_dialog_confirmed"]
